doc: Add 'What is End-to-end Learning?' section.

--- a/machine-learning/deep-learning-specialization-coursera/course-3/notebooks/week2.ipynb
+++ b/machine-learning/deep-learning-specialization-coursera/course-3/notebooks/week2.ipynb
@@ -521,6 +521,66 @@
    "cell_type": "markdown",
    "id": "d6b16e07",
    "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f379d381",
+   "metadata": {},
+   "source": [
+    "## What is End-to-end Learning?\n",
+    "\n",
+    "**End-to-End Deep Learning (E2E)** is a recent paradigm shift in which a complex multi-stage data processing pipeline is replaced by a single, large neural network that maps raw input ($X$) directly to the desired output ($Y$). While this simplifies systems by eliminating manual feature engineering, it comes with a high data requirement.\n",
+    "\n",
+    "### The Concept and Contrast\n",
+    "\n",
+    "| Traditional Pipeline (Non-E2E) | End-to-End Deep Learning (E2E) |\n",
+    "| :--- | :--- |\n",
+    "| **Multiple Stages:** Data is processed sequentially through hand-designed stages (e.g., feature extraction, phoneme recognition, word assembly). | **Single Stage:** A single, large neural network maps raw input $X$ directly to final output $Y$. |\n",
+    "| **Pros:** Works well with limited data; allows for debugging intermediate components. | **Pros:** System simplification; often achieves better performance when data is abundant; less manual engineering. |\n",
+    "| **Cons:** Labor-intensive; performance capped by human-designed features. | **Cons:** Requires massive datasets; debugging intermediate steps is difficult. |\n",
+    "\n",
+    "### When E2E Works Best\n",
+    "\n",
+    "The primary factor determining the success of E2E deep learning is **the amount of available data** for the $X \\rightarrow Y$ mapping.\n",
+    "\n",
+    "**Requirement: Massive Data:** E2E approaches shine when the amount of (X, Y) pairs is large enough to allow the single network to implicitly learn all the complex intermediate stages that a traditional pipeline would have implemented manually.\n",
+    "* *Example 1 (Success):* **Machine Translation.** E2E works well because there are huge datasets of (English Sentence, French Translation) pairs.\n",
+    "* *Example 2 (Success):* **Speech Recognition.** E2E only starts to surpass traditional pipelines when training data exceeds a critical threshold (e.g., 10,000 to 100,000 hours of audio data).\n",
+    "\n",
+    "### When to Use a Multi-Step (Non-E2E) Approach\n",
+    "\n",
+    "If the direct $X \\rightarrow Y$ training data is scarce, or if the problem naturally decomposes into simpler, well-studied sub-tasks, a multi-step approach is superior.\n",
+    "\n",
+    "* **Scenario: Face Recognition Turnstile**\n",
+    "    * **Goal:** Map raw camera image ($X$) $\\rightarrow$ Person's Identity ($Y$).\n",
+    "    * **E2E Problem:** Not enough raw ($X, Y$) data (image from the specific turnstile, identity).\n",
+    "    * **Better Solution (Two Steps):**\n",
+    "        1.  **Face Detection:** Find the face in the image (Task 1).\n",
+    "        2.  **Face Recognition:** Take the cropped face image $\\rightarrow$ Identify the person (Task 2).\n",
+    "    * **Why it works:** You have massive, separate datasets for Task 1 (general face detection) and Task 2 (cropped face matching), making the multi-step system more robust and accurate today.\n",
+    "\n",
+    "* **Scenario: Bone Age Estimation (from X-ray)**\n",
+    "    * **Goal:** Map X-ray image ($X$) $\\rightarrow$ Child's Age ($Y$).\n",
+    "    * **E2E Problem:** Not enough direct ($X, Y$) pairs for end-to-end learning.\n",
+    "    * **Better Solution (Multi-Step):**\n",
+    "        1.  **Bone Segmentation:** Identify and measure individual bones (intermediate output).\n",
+    "        2.  **Age Lookup:** Use bone lengths and statistical tables to estimate age.\n",
+    "\n",
+    "### Summary of End-to-End Decision\n",
+    "\n",
+    "| Goal | Best Approach | Condition | Benefit |\n",
+    "| :--- | :--- | :--- | :--- |\n",
+    "| Simplify System | End-to-End | Massive data for direct $X \\rightarrow Y$ mapping. | Eliminates years of manual feature engineering and pipeline component research. |\n",
+    "| Maximize Performance | Multi-Step Pipeline | Limited data for end-to-end mapping, OR the sub-tasks have abundant individual data. | Breaks a complex problem into simpler, well-trained components, resulting in higher accuracy today. |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "93ba52d7",
+   "metadata": {},
    "source": []
   }
  ],
