doc: Add 'Whether to use End-to-end Deep Learning' section.

--- a/machine-learning/deep-learning-specialization-coursera/course-3/notebooks/week2.ipynb
+++ b/machine-learning/deep-learning-specialization-coursera/course-3/notebooks/week2.ipynb
@@ -530,7 +530,7 @@
    "id": "f379d381",
    "metadata": {},
    "source": [
-    "## What is End-to-end Learning?\n",
+    "## What is End-to-end Deep Learning?\n",
     "\n",
     "**End-to-End Deep Learning (E2E)** is a recent paradigm shift in which a complex multi-stage data processing pipeline is replaced by a single, large neural network that maps raw input ($X$) directly to the desired output ($Y$). While this simplifies systems by eliminating manual feature engineering, it comes with a high data requirement.\n",
     "\n",
@@ -580,6 +580,59 @@
   {
    "cell_type": "markdown",
    "id": "93ba52d7",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2597b3e4",
+   "metadata": {},
+   "source": [
+    "## Whether to use End-to-end Deep Learning\n",
+    "\n",
+    "The final section on **End-to-End Deep Learning (E2E)** focuses on providing a systematic framework for deciding whether to use a single, direct $X \\rightarrow Y$ network or a multi-step pipeline. The decision hinges primarily on data availability and the complexity of the function being learned.\n",
+    "\n",
+    "### Advantages of End-to-End Learning (E2E)\n",
+    "\n",
+    "| Advantage | Description |\n",
+    "| :--- | :--- |\n",
+    "| **Data Speaks for Itself** | If you have enough $X, Y$ data, the large neural network can learn the most appropriate mapping without human interference, potentially discovering superior representations (e.g., bypassing the use of linguist-defined \"phonemes\" in speech). |\n",
+    "| **Reduced Hand-Engineering** | Simplifies the development workflow by eliminating the need to manually design intermediate features, processing stages, or representations. |\n",
+    "\n",
+    "### Disadvantages of End-to-End Learning (E2E)\n",
+    "\n",
+    "| Disadvantage | Description |\n",
+    "| :--- | :--- |\n",
+    "| **Massive Data Requirement** | E2E requires a large amount of linked $X, Y$ data for the entire system, which is often harder to obtain than data for individual sub-tasks. |\n",
+    "| **Excludes Useful Hand-Designed Components** | By forcing a direct mapping, E2E excludes the ability to inject human knowledge (features, components) into the pipeline. This knowledge is crucial when training data is small, as it provides an alternative source of information for the algorithm. |\n",
+    "\n",
+    "### The Core Decision Guideline\n",
+    "\n",
+    "The single most important question when considering E2E is:\n",
+    "\n",
+    "> **Do you have sufficient data to learn the function of the complexity needed to map directly from $X$ to $Y$?**\n",
+    "\n",
+    "* **If $X \\rightarrow Y$ is Simple or Data is Abundant:** Use E2E (e.g., Machine Translation, Speech Recognition with 100,000 hours of data).\n",
+    "* **If $X \\rightarrow Y$ is Complex or Data is Scarce:** Use a Multi-Step Pipeline (Non-E2E).\n",
+    "\n",
+    "### 4. Application Example: Autonomous Driving\n",
+    "\n",
+    "For a highly complex task like autonomous driving, a multi-step pipeline is currently the most successful approach, as the end-to-end data ($X \\rightarrow Y$) is insufficient to learn the full mapping safely.\n",
+    "\n",
+    "| Stage | Input/Output | Technique | Purpose |\n",
+    "| :--- | :--- | :--- | :--- |\n",
+    "| **1. Perception** | Image/Sensor Input $\\rightarrow$ **Object Locations** (Cars, Pedestrians) | Deep Learning | Provides a semantic understanding of the environment. |\n",
+    "| **2. Motion Planning** | Object Locations $\\rightarrow$ **Desired Trajectory** (Path) | Classical Software / Motion Planning Algorithms | Calculates the optimal, collision-free path based on physics and safety rules. (Often Non-Deep Learning). |\n",
+    "| **3. Control** | Desired Trajectory $\\rightarrow$ **Steering/Braking Commands** | Classical Software / Control Algorithms | Executes the path by generating physical commands. (Often Non-Deep Learning). |\n",
+    "\n",
+    "* **Conclusion for Autonomous Driving:** A pure E2E approach (Image $\\rightarrow$ Steering Command) is currently less promising than a sophisticated, multi-stage pipeline due to the sheer complexity of the safety-critical function being learned and the lack of comprehensive end-to-end training data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "03cf17ce",
    "metadata": {},
    "source": []
   }
