doc: Update 'TOC' section.

--- a/machine-learning/deep-learning-specialization-coursera/course-3/notebooks/week2.ipynb
+++ b/machine-learning/deep-learning-specialization-coursera/course-3/notebooks/week2.ipynb
@@ -25,7 +25,19 @@
     }
    },
    "source": [
-    "## Table of Contents"
+    "## Table of Contents\n",
+    "\n",
+    "* [Carrying out Error Analysis](#carrying-out-error-analysis)  \n",
+    "* [Cleaning Up Incorrectly Labeled Data](#cleaning-up-incorrectly-labeled-data)  \n",
+    "* [Build your First System Quickly, then Iterate](#build-your-first-system-quickly-then-iterate)  \n",
+    "* [Training and Testing on Different Distributions](#training-and-testing-on-different-distributions)  \n",
+    "* [Bias and Variance with Mismatched Data Distributions](#bias-and-variance-with-mismatched-data-distributions)  \n",
+    "* [Addressing Data Mismatch](#addressing-data-mismatch)  \n",
+    "* [Bonus: Elaborating on Artificial Data Synthesis (ADS)](#bonus-elaborating-on-artificial-data-synthesis-ads)  \n",
+    "* [Transfer Learning](#transfer-learning)  \n",
+    "* [Multi-Task Learning](#multi-task-learning)  \n",
+    "* [What is End-to-end Deep Learning?](#what-is-end-to-end-deep-learning)  \n",
+    "* [Whether to use End-to-end Deep Learning](#whether-to-use-end-to-end-deep-learning)"
    ]
   },
   {
@@ -629,12 +641,6 @@
     "\n",
     "* **Conclusion for Autonomous Driving:** A pure E2E approach (Image $\\rightarrow$ Steering Command) is currently less promising than a sophisticated, multi-stage pipeline due to the sheer complexity of the safety-critical function being learned and the lack of comprehensive end-to-end training data."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "03cf17ce",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
