doc: Add 'Computer vision' intro section.

--- a/machine-learning/deep-learning-specialization-coursera/course-4/notebooks/week1.ipynb
+++ b/machine-learning/deep-learning-specialization-coursera/course-4/notebooks/week1.ipynb
@@ -52,6 +52,44 @@
    "cell_type": "markdown",
    "id": "b0092d2f",
    "metadata": {},
+   "source": [
+    "## Computer Vision\n",
+    "\n",
+    "In this introduction to Convolutional Neural Networks (CNNs), the focus is on the transformative power of computer vision and the technical necessity of convolutions when dealing with high-resolution image data.\n",
+    "\n",
+    "### Importance and Impact of Computer Vision\n",
+    "\n",
+    "* **Rapid Advancement:** Deep learning has propelled computer vision into real-world utility, enabling self-driving cars, advanced face recognition, and relevant content curation in consumer apps.\n",
+    "* **Cross-Fertilization:** Architectural innovations in computer vision often inspire breakthroughs in other fields, such as speech recognition.\n",
+    "\n",
+    "### Key Computer Vision Problems\n",
+    "\n",
+    "* **Image Classification:** Determining whether an object (e.g., a cat) is present in an image.\n",
+    "* **Object Detection:** Not only identifying objects but also determining their specific positions and drawing bounding boxes around them.\n",
+    "* **Neural Style Transfer:** Repainting a content image in the artistic style of a reference image (e.g., turning a landscape photo into a \"Picasso\" style painting).\n",
+    "\n",
+    "<img src='images/cv.png' width=750px>\n",
+    "\n",
+    "### The Challenge of Input Scale\n",
+    "\n",
+    "* **Small Images:** A $64 \\times 64$ RGB image has 12,288 features ($64 \\times 64 \\times 3$), which is manageable for standard fully connected networks.\n",
+    "* **Large Images:** A modest $1000 \\times 1000$ (1-megapixel) image results in 3,000,000 input features.\n",
+    "* **Parameter Explosion:** * In a fully connected layer with just 1,000 hidden units, a 1-megapixel input would require a weight matrix with 3 billion parameters.\n",
+    "* **Overfitting:** With billions of parameters, models are highly prone to overfitting without massive amounts of data.\n",
+    "* **Resource Constraints:** The memory and computational power required to train such a network are generally infeasible for standard hardware.\n",
+    "\n",
+    "<img src='images/input_scale.png' width=750px>\n",
+    "\n",
+    "### The Solution: Convolutional Operations\n",
+    "\n",
+    "* To process high-resolution images efficiently without a parameter explosion, deep learning uses **Convolutional Neural Networks (CNNs)**.\n",
+    "* **Convolutions:** This operation is the fundamental building block of CNNs, allowing the network to learn local patterns (like edges) while drastically reducing the number of parameters compared to fully connected layers."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "22f1f1d0",
+   "metadata": {},
    "source": []
   }
  ],
