--- a/machine-learning/deep-learning-specialization-coursera/course-4/notebooks/week1.ipynb
+++ b/machine-learning/deep-learning-specialization-coursera/course-4/notebooks/week1.ipynb
@@ -90,7 +90,54 @@
    "cell_type": "markdown",
    "id": "22f1f1d0",
    "metadata": {},
-   "source": []
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "89c8a309",
+   "metadata": {},
+   "source": [
+    "## Edge Detection Example\n",
+    "\n",
+    "The convolution operation is a fundamental building block of Convolutional Neural Networks (CNNs). It allows a model to learn features—starting with simple edges and progressing to complex objects—by sliding a filter over an input image.\n",
+    "\n",
+    "### What is the Convolution Operation?\n",
+    "\n",
+    "In computer vision, convolution is used to detect specific features, such as vertical or horizontal lines.\n",
+    "* **The Input:** A grayscale image is represented as a matrix of pixel intensities (e.g., a $6 \\times 6 \\times 1$ matrix).\n",
+    "* **The Filter (or Kernel):** A smaller matrix (typically $3 \\times 3$) designed to identify a specific pattern. For a vertical edge detector, a common filter is:\n",
+    "\n",
+    "$$ \\begin{bmatrix} 1 & 0 & -1 \\\\ 1 & 0 & -1 \\\\ 1 & 0 & -1 \\end{bmatrix}$$\n",
+    "\n",
+    "* **The Notation:** In math and deep learning, the asterisk ($*$) denotes the convolution operation (not to be confused with standard multiplication).\n",
+    "\n",
+    "### The Mechanics of Convolution\n",
+    "\n",
+    "The process of convolving a $6 \\times 6$ image with a $3 \\times 3$ filter results in a $4 \\times 4$ output matrix.\n",
+    "\n",
+    "1. **Overlay:** Place the $3 \\times 3$ filter over the top-left $3 \\times 3$ patch of the image.\n",
+    "2. **Element-wise Product:** Multiply each of the 9 numbers in the filter by the corresponding pixel value in the image patch.\n",
+    "3. **Summation:** Add those 9 products together to get a single value for the first cell of the output matrix.\n",
+    "4. **Shift (Slide):** Move the filter one pixel to the right (the \"stride\") and repeat the calculation. Once the row is finished, move down and start the next row.\n",
+    "\n",
+    "### Intuition: Why It Detects Edges\n",
+    "\n",
+    "The filter acts as a mathematical \"transition detector.\"\n",
+    "* **Vertical Edge Case:** Imagine an image where the left half is bright (pixel value 10) and the right half is dark (pixel value 0).\n",
+    "* **The Calculation:** When the filter (with 1s on the left and -1s on the right) sits on the transition:\n",
+    "    * The 1s multiply the bright pixels (high positive sum).\n",
+    "    * The -1s multiply the dark pixels (near-zero sum).\n",
+    "* **The Result:** The sum is a large positive number (e.g., 30). In areas where the color is uniform (all 10s or all 0s), the 1s and -1s cancel each other out, resulting in 0.\n",
+    "* **Visual Output:** The final $4 \\times 4$ matrix will show a bright \"strip\" in the middle, representing the detected edge.\n",
+    "### Practical Implementation\n",
+    "\n",
+    "In deep learning frameworks, you don't perform these sums manually. Functions are built-in to handle high-dimensional convolutions:\n",
+    "* **TensorFlow:** `tf.nn.conv2d`\n",
+    "* **Keras:** `Conv2D layer`\n",
+    "* **Output Dimensions:** For an $n \\times n$ image and an $f \\times f$ filter, the output size is generally $(n - f + 1) \\times (n - f + 1)$. In our example, $6 - 3 + 1 = 4$."
+   ]
   }
  ],
  "metadata": {
