doc: Add images and update 'Edge Detection Example' section with an image.

--- a/machine-learning/deep-learning-specialization-coursera/course-4/notebooks/week1.ipynb
+++ b/machine-learning/deep-learning-specialization-coursera/course-4/notebooks/week1.ipynb
@@ -131,6 +131,9 @@
     "    * The -1s multiply the dark pixels (near-zero sum).\n",
     "* **The Result:** The sum is a large positive number (e.g., 30). In areas where the color is uniform (all 10s or all 0s), the 1s and -1s cancel each other out, resulting in 0.\n",
     "* **Visual Output:** The final $4 \\times 4$ matrix will show a bright \"strip\" in the middle, representing the detected edge.\n",
+    "\n",
+    "<img src='images/edge_detection.png' width=750px>\n",
+    "\n",
     "### Practical Implementation\n",
     "\n",
     "In deep learning frameworks, you don't perform these sums manually. Functions are built-in to handle high-dimensional convolutions:\n",
@@ -138,6 +141,12 @@
     "* **Keras:** `Conv2D layer`\n",
     "* **Output Dimensions:** For an $n \\times n$ image and an $f \\times f$ filter, the output size is generally $(n - f + 1) \\times (n - f + 1)$. In our example, $6 - 3 + 1 = 4$."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2b34e7c2",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
