doc: Add 'Mpre Edge Detection' section.

--- a/machine-learning/deep-learning-specialization-coursera/course-4/notebooks/week1.ipynb
+++ b/machine-learning/deep-learning-specialization-coursera/course-4/notebooks/week1.ipynb
@@ -146,6 +146,67 @@
    "cell_type": "markdown",
    "id": "2b34e7c2",
    "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f46c9546",
+   "metadata": {},
+   "source": [
+    "## More Edge Detection\n",
+    "\n",
+    "This section discusses edge detection transitions, specialized filters, and the transition to learned parameters in Convolutional Neural Networks (CNNs).\n",
+    "\n",
+    "### Positive vs. Negative Edge Transitions\n",
+    "\n",
+    "* **Direction Matters:** Edge detection identifies the direction of light intensity change.\n",
+    "    * **Light to Dark:** A transition from high pixel values ($10$) to low values ($0$) results in a positive output (e.g., $+30$).\n",
+    "    * **Dark to Light:** A transition from low pixel values ($0$) to high values ($10$) results in a negative output (e.g., $-30$).\n",
+    "* **Absolute Value:** If the specific direction of the transition is irrelevant to the task, the absolute value of the output matrix can be used to treat all edges equally.\n",
+    "\n",
+    "### Horizontal vs. Vertical Detection\n",
+    "\n",
+    "* **Vertical Filters:** Designed with vertical columns of weights (e.g., positive on left, negative on right) to detect changes across the x-axis.\n",
+    "* **Horizontal Filters:** Designed with horizontal rows of weights to detect changes across the y-axis (top vs. bottom). A typical horizontal filter is the 90-degree rotation of the vertical filter:\n",
+    "\n",
+    "$$\\text{Horizontal Filter} = \\begin{bmatrix}1&1&1\\\\0&0&0\\\\-1&-1&-1\\end{bmatrix}$$\n",
+    "\n",
+    "### Specialized Hand-Coded Filters\n",
+    "\n",
+    "Historically, researchers developed specific matrices to make edge detection more robust to noise:\n",
+    "* **Sobel Filter:** Adds weight to the central pixel to increase robustness.\n",
+    "\n",
+    "$$\\text{Sobel} = \\begin{bmatrix}1&0&-1\\\\2&0&-2\\\\1&0&-1\\end{bmatrix}$$\n",
+    "\n",
+    "* **Scharr Filter:** Uses even more aggressive weighting for specific statistical properties.\n",
+    "\n",
+    "$$\\text{Scharr} = \\begin{bmatrix}3&0&-3\\\\10&0&-10\\\\3&0&-3\\end{bmatrix}$$\n",
+    "\n",
+    "### The Deep Learning Paradigm: Learned Filters\n",
+    "\n",
+    "The most significant shift in modern AI is moving from hand-coded filters to learned parameters.\n",
+    "\n",
+    "**Learnable Weights:** Instead of manually picking values like $1$ or $10$, the nine numbers in a $3\\times3$ filter are treated as parameters ($w_1$ through $w_9$). The network uses backpropagation to automatically learn the optimal weights based on the dataset. Learned filters can detect edges at any orientation (e.g., $45^\\circ$, $73^\\circ$) or even complex textures that do not have a standard mathematical name.\n",
+    "\n",
+    "### Mathematical Representation\n",
+    "\n",
+    "Whether hand-coded or learned, the operation remains a convolution. For a $6\\times6$ input and a $3\\times3$ filter, we are optimizing the parameters to produce a $4\\times4$ feature map that minimizes the loss function:\n",
+    "\n",
+    "$$(n-f+1) \\times (n-f+1) = (6-3+1) \\times (6-3+1) = 4 \\times 4$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b8d74859",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
    "source": []
   }
  ],
