doc: Add 'Padding' section.

--- a/machine-learning/deep-learning-specialization-coursera/course-4/notebooks/week1.ipynb
+++ b/machine-learning/deep-learning-specialization-coursera/course-4/notebooks/week1.ipynb
@@ -198,16 +198,57 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "b8d74859",
    "metadata": {
     "vscode": {
      "languageId": "plaintext"
     }
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "----"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "df1e6ee5",
+   "metadata": {},
+   "source": [
+    "## Padding\n",
+    "\n",
+    "This section describes the key principles of Padding, which is a vital modification to the standard convolution operation used to build deep neural networks.\n",
+    "\n",
+    "### The Problems with \"Valid\" Convolutions\n",
+    "\n",
+    "Without padding, standard convolutions (called \"Valid\" convolutions) suffer from two primary issues:\n",
+    "* **Image Shrinkage:** Every layer reduces the spatial dimensions. In deep networks with hundreds of layers, the image would shrink to $1\\times{1}$ very quickly.\n",
+    "* **Loss of Edge Information:** Pixels at the corners and edges are only \"touched\" by the filter a few times, whereas central pixels are included in many overlapping $3\\times3$ regions. This results in the network effectively \"throwing away\" data from the borders.\n",
+    "\n",
+    "### The Solution: Padding ($p$)\n",
+    "\n",
+    "Padding involves adding a border of pixels (usually filled with zeros) around the original image before applying the filter.\n",
+    "* **Dimensionality Preservation:** If we pad a $6\\times6$ image with a border of $p=1$, it becomes an $8\\times8$ matrix. Convolving this with a $3\\times3$ filter results in a $6\\times6$ output, perfectly preserving the original size.\n",
+    "* **Updated Output Formula:** With padding $p$ included, the output dimension for an $n\\times{n}$ image and $f\\times{f}$ filter is:\n",
+    "\n",
+    "$$(n+2p-f+1)\\times(n+2p-f+1)$$\n",
+    "\n",
+    "Example: For $n=6, f=3, p=1$:\n",
+    "\n",
+    "$$(6+2(1)-3+1)=6$$\n",
+    "\n",
+    "### Common Padding Choices\n",
+    "1. **Valid Convolution:** This means $p=0$. The output size is simply $(n-f+1)$.\n",
+    "2. **Same Convolution:** The padding is calculated so that the output size equals the input size.\n",
+    "To achieve a \"Same\" convolution, the padding $p$ must follow this formula:\n",
+    "\n",
+    "$$p=\\frac{f-1}{2}$$\n",
+    "\n",
+    "### Why Filters are Almost Always Odd\n",
+    "\n",
+    "In computer vision, filters ($f$) like $3\\times3$, $5\\times5$, or $7\\times7$ are standard. Even-sized filters are rarely used for two reasons:\n",
+    "* **Symmetry:** If $f$ is even, the padding $p$ would need to be asymmetric (e.g., padding more on the left than the right), which is computationally messy.\n",
+    "* **Central Pixel:** Odd-sized filters have a clear \"central pixel,\" which is helpful for tracking the position and orientation of features in the image."
+   ]
   }
  ],
  "metadata": {
