doc: Add 'Strided Convolution' section.

--- a/machine-learning/deep-learning-specialization-coursera/course-4/notebooks/week1.ipynb
+++ b/machine-learning/deep-learning-specialization-coursera/course-4/notebooks/week1.ipynb
@@ -249,6 +249,72 @@
     "* **Symmetry:** If $f$ is even, the padding $p$ would need to be asymmetric (e.g., padding more on the left than the right), which is computationally messy.\n",
     "* **Central Pixel:** Odd-sized filters have a clear \"central pixel,\" which is helpful for tracking the position and orientation of features in the image."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5181a637",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "675145f7",
+   "metadata": {},
+   "source": [
+    "## Strided Convolutions\n",
+    "\n",
+    "This section discusses the key mechanics of **Strided Convolutions** and the technical distinction between convolution and cross-correlation.\n",
+    "\n",
+    "### Strided Convolutions\n",
+    "\n",
+    "Strided convolutions introduce a \"jump\" in the sliding window process, effectively downsampling the image during the convolution itself.\n",
+    "* **The Mechanism:** Instead of moving the filter by $1$ pixel at a time, we move it by a value $s$ (the stride).\n",
+    "If $s=2$, the filter hops over two positions horizontally and vertically, skipping intermediate calculations.\n",
+    "* **Purpose:** This is primarily used to reduce the spatial dimensions (width and height) of the feature maps as the data moves deeper into the network, reducing computational load and increasing the receptive field.\n",
+    "\n",
+    "### The General Output Dimension Formula\n",
+    "\n",
+    "When combining input size ($n$), filter size ($f$), padding ($p$), and stride ($s$), the dimension of the output is calculated as:\n",
+    "\n",
+    "$$\\lfloor\\frac{n+2p-f}{s}+1\\rfloor\\times\\lfloor\\frac{n+2p-f}{s}+1\\rfloor$$\n",
+    "\n",
+    "The Floor Function: The $\\lfloor{z}\\rfloor$ notation denotes the \"floor\" of $z$, which means rounding down to the nearest integer.\n",
+    "\n",
+    "**The Logic:** In deep learning conventions, a filter must lie entirely within the image (or padded area). If the stride causes the filter to \"hang\" off the edge, that final calculation is simply discarded.\n",
+    "\n",
+    "Example: For $n=7, f=3, p=0, s=2$:\n",
+    "\n",
+    "$$\\lfloor\\frac{7+0-3}{2}+1\\rfloor=\\lfloor\\frac{4}{2}+1\\rfloor=3$$\n",
+    "\n",
+    "The resulting output is a $3\\times3$ matrix.\n",
+    "\n",
+    "### Convolution vs. Cross-Correlation\n",
+    "\n",
+    "There is a common terminology mismatch between pure mathematics and deep learning:\n",
+    "* **Mathematical Convolution:** Requires \"flipping\" the filter both horizontally and vertically (mirroring) before performing the element-wise product. This gives the operation the associative property:\n",
+    "\n",
+    "$$(A*B)*C=A*(B*C)$$\n",
+    "\n",
+    "* **Cross-Correlation:** The exact same operation but without the flipping step.\n",
+    "* **Deep Learning Convention:** In AI literature, we perform cross-correlation but almost universally refer to it as \"convolution.\"\n",
+    "* **Why it doesn't matter:** In a neural network, the filter values are learned via backpropagation. If a \"flipped\" filter were better, the network would simply learn the weights in that flipped orientation automatically. Omitting the flip simplifies implementation without affecting performance.\n",
+    "\n",
+    "### Summary Table of Parameters\n",
+    "| Parameter | Symbol | Effect on Output Size |\n",
+    "| --- | --- | --- |\n",
+    "|Input Size | $n$ | Larger input leads to larger output |\n",
+    "| Filter Size | $f$ | Larger filter reduces output size |\n",
+    "| Padding | $p$ | Increases output size (preserves borders)| \n",
+    "| Stride | $s$ | Larger stride significantly reduces output size |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6be0a3be",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
