doc: Add 'Convolution Over Volume' section.

--- a/machine-learning/deep-learning-specialization-coursera/course-4/notebooks/week1.ipynb
+++ b/machine-learning/deep-learning-specialization-coursera/course-4/notebooks/week1.ipynb
@@ -314,6 +314,67 @@
    "cell_type": "markdown",
    "id": "6be0a3be",
    "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "02a54d6b",
+   "metadata": {},
+   "source": [
+    "## Convolutions Over Volume\n",
+    "\n",
+    "This section explains how the convolution operation expands from 2D grayscale images into 3D Volumes, which is the standard way CNNs process color images and complex feature maps.\n",
+    "\n",
+    "### Convolving over RGB Channels\n",
+    "\n",
+    "* **The Input Volume:** A color image is typically represented as a $6 \\times 6 \\times 3$ volume, where the last dimension corresponds to the Red, Green, and Blue (RGB) channels.\n",
+    "* **The 3D Filter:** To convolve over this volume, the filter must also be 3D. A $3 \\times 3$ filter becomes a $3 \\times 3 \\times 3$ volume.\n",
+    "* **Channel Matching Rule:** The number of channels in the filter must exactly match the number of channels in the input.\n",
+    "    * Formula: $n \\times n \\times n_c$ input requires an $f \\times f \\times n_c$ filter.\n",
+    "* **The Calculation:** The filter (containing $27$ parameters for $3^3$) overlays a 3D patch of the image. You perform an element-wise product of all $27$ numbers and sum them into a single value.\n",
+    "* **Dimensionality Reduction:** Even though the input and filter are 3D, the output of a single filter is a 2D matrix.\n",
+    "Output size: $(n - f + 1) \\times (n - f + 1) \\times 1$.\n",
+    "\n",
+    "### Multiple Feature Detection\n",
+    "\n",
+    "In practice, we don't just want to detect one type of feature (like vertical edges). We want to detect many features simultaneously.\n",
+    "* **Stacking Filters:** If you use two different filters (e.g., one for vertical edges and one for horizontal edges), each produces its own $4 \\times 4$ output.\n",
+    "* **Output Volumes:** These 2D outputs are stacked together to form a new 3D volume.\n",
+    "If you use $2$ filters, the output is $4 \\times 4 \\times 2$.\n",
+    "If you use $128$ filters, the output is $4 \\times 4 \\times 128$.\n",
+    "* **Channels vs. Depth:** While some literature refers to this third dimension as \"depth,\" the term \"channels\" is preferred in this context to avoid confusion with the \"depth\" (number of layers) of the neural network itself.\n",
+    "\n",
+    "<img src='images/con_vol.png' width=750px>\n",
+    "\n",
+    "### Summary of Dimensions\n",
+    "\n",
+    "For an input volume with height/width $n$ and $n_c$ channels, using $n_c'$ filters of size $f$:\n",
+    "\n",
+    "**Input:**\n",
+    "\n",
+    "$$n \\times n \\times n_c$$\n",
+    "\n",
+    "**Filter:**\n",
+    "\n",
+    "$$f \\times f \\times n_c'$$\n",
+    "\n",
+    "**Output:**\n",
+    "\n",
+    "$$(n - f + 1) \\times (n - f + 1) \\times n_c'$$\n",
+    "\n",
+    "(Note: This assumes a stride $s = 1$ and padding $p = 0$. If these are changed, the spatial dimensions $n - f + 1$ are updated using the standard formulas discussed previously.)\n",
+    "\n",
+    "### Why This Matters\n",
+    "\n",
+    "This approach allows the network to look for different patterns in different colors (e.g., an edge that only appears in the Red channel) or look for universal patterns by using the same weights across all three channels."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "03f7081b",
+   "metadata": {},
    "source": []
   }
  ],
