doc: Add 'One Layer of Convolutional Network' section.

--- a/machine-learning/deep-learning-specialization-coursera/course-4/notebooks/week1.ipynb
+++ b/machine-learning/deep-learning-specialization-coursera/course-4/notebooks/week1.ipynb
@@ -375,6 +375,72 @@
    "cell_type": "markdown",
    "id": "03f7081b",
    "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "33bc8f39",
+   "metadata": {},
+   "source": [
+    "## One Layer of Convolutional Network\n",
+    "\n",
+    "In this section, we demonstrate the transition from a single convolution operation to a complete Convolutional Neural Network (CNN) Layer. This involves adding biases, non-linearities, and understanding parameter scaling.\n",
+    "\n",
+    "### Building a Full CNN Layer\n",
+    "\n",
+    "One layer of a CNN consists of several sequential operations that map an input volume $a^{[l-1]}$ to an output activation volume $a^{[l]}$:\n",
+    "1. **Convolution:** Multiply the input volume by $n_c$ different filters (weights $W^{[l]}$).\n",
+    "2. **Bias Addition:** Add a specific bias $b^{[l]}$ to each filter's output. Note that through broadcasting, a single real number is added to every element in that filter's output map.\n",
+    "3. **Non-linearity:** Apply an activation function, most commonly ReLU ($g(z) = \\max(0, z)$).\n",
+    "4. **Stacking:** Combine the results into a 3D volume where the depth equals the number of filters used.\n",
+    "\n",
+    "<img src='images/cnn_one_layer_example.png' width=800px>\n",
+    "\n",
+    "### Parameter Calculation Exercise\n",
+    "\n",
+    "A major advantage of CNNs is parameter sharing, which makes them less prone to overfitting than fully connected networks.\n",
+    "\n",
+    "**Example Case:**\n",
+    "\n",
+    "* **Input:** $6 \\times 6 \\times 3$ image\n",
+    "* **Filters:** $10$ filters of size $3 \\times 3 \\times 3$\n",
+    "* **Parameters per filter:** $(3 \\times 3 \\times 3) = 27$ weights $+ 1$ bias = $28$ parameters.\n",
+    "* **Total parameters for the layer:** $28 \\times 10 = 280$\n",
+    "\n",
+    "**Key Insight:** The number of parameters ($280$) remains constant regardless of the input image size (whether it's $1,000 \\times 1,000$ or $5,000 \\times 5,000$).\n",
+    "\n",
+    "### Notation Summary for Layer $l$\n",
+    "\n",
+    "To describe deep networks, we use specific notation for each layer's properties:\n",
+    "* **Filter Size:** $f^{[l]}$\n",
+    "* **Padding:** $p^{[l]}$\n",
+    "* **Stride:** $s^{[l]}$\n",
+    "* **Number of Filters:** $n_c^{[l]}$\n",
+    "\n",
+    "**Dimensions of Volumes:**\n",
+    "* **Input:** $n_H^{[l-1]} \\times n_W^{[l-1]} \\times n_c^{[l-1]}$\n",
+    "* **Output:** $n_H^{[l]} \\times n_W^{[l]} \\times n_c^{[l]}$\n",
+    "\n",
+    "The height ($n_H$) and width ($n_W$) are calculated using:\n",
+    "\n",
+    "$$n_H^{[l]} = \\lfloor \\frac{n_H^{[l-1]} + 2p^{[l]} - f^{[l]}}{s^{[l]}} + 1 \\rfloor$$\n",
+    "\n",
+    "**Weights and Activations:**\n",
+    "* **Weights ($W^{[l]}$):** The total volume of weights is $f^{[l]} \\times f^{[l]} \\times n_c^{[l-1]} \\times n_c^{[l]}$.\n",
+    "* **Biases ($b^{[l]}$):** A vector of dimension $n_c^{[l]}$ (or represented as $1 \\times 1 \\times 1 \\times n_c^{[l]}$).\n",
+    "* **Activations ($a^{[l]}$):** $n_H^{[l]} \\times n_W^{[l]} \\times n_c^{[l]}$.\n",
+    "\n",
+    "In vectorized implementations (batch size or mini-batch size $m$), the dimension of $A^{[l]}$ is $m \\times n_H^{[l]} \\times n_W^{[l]} \\times n_c^{[l]}$.\n",
+    "\n",
+    "**Note on Convention:** While some frameworks use \"channels first\" ($m, n_c, n_H, n_W$), here we follow the \"channels last\" convention ($m, n_H, n_W, n_c$)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cfc70106",
+   "metadata": {},
    "source": []
   }
  ],
