--- a/machine-learning/deep-learning-specialization-coursera/course-4/notebooks/week1.ipynb
+++ b/machine-learning/deep-learning-specialization-coursera/course-4/notebooks/week1.ipynb
@@ -441,6 +441,73 @@
    "cell_type": "markdown",
    "id": "cfc70106",
    "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2b027918",
+   "metadata": {},
+   "source": [
+    "## Simple Convolutional Netwrok Example\n",
+    "\n",
+    "This section describes the architecture of a complete Deep Convolutional Neural Network (ConvNet) example. This example demonstrates how spatial dimensions shrink while feature depth increases as data moves toward a final classification.\n",
+    "\n",
+    "### Anatomy of a Typical ConvNet\n",
+    "\n",
+    "A standard image classification pipeline follows a specific progression: taking an input image $x$ (e.g., $39 \\times 39 \\times 3$) and transforming it into a high-level feature vector for prediction.\n",
+    "* **Layer 1 (Conv1):**\n",
+    "    * **Input:** $39 \\times 39 \\times 3$\n",
+    "    * **Hyperparameters:** $f^{[1]}=3, s^{[1]}=1, p^{[1]}=0$ (Valid), $10$ filters.\n",
+    "    * **Output:** $37 \\times 37 \\times 10$.\n",
+    "* **Layer 2 (Conv2):**\n",
+    "    * **Input:** $37 \\times 37 \\times 10$\n",
+    "    * **Hyperparameters:** $f^{[2]}=5, s^{[2]}=2, p^{[2]}=0, 20$ filters.\n",
+    "    * **Output:** $17 \\times 17 \\times 20$.\n",
+    "* **Layer 3 (Conv3):**\n",
+    "    * **Input:** $17 \\times 17 \\times 20$\n",
+    "    * **Hyperparameters:** $f^{[3]}=5, s^{[3]}=2, p^{[3]}=0, 40$ filters.\n",
+    "    * **Output:** $7 \\times 7 \\times 40$.\n",
+    "\n",
+    "<img src='images/conv_net_example.png' width=800px>\n",
+    "\n",
+    "### The Design Pattern: Spatial vs. Depth\n",
+    "\n",
+    "A key observation in ConvNet design is the inverse relationship between spatial dimensions and channel depth:\n",
+    "* **Height and Width ($n_H, n_W$):** Typically decrease as you go deeper into the network (e.g., $39 \\to 37 \\to 17 \\to 7$).\n",
+    "* **Number of Channels ($n_c$):** Typically increase as you go deeper (e.g., $3 \\to 10 \\to 20 \\to 40$). This allows the network to detect a wider variety of complex features even as the resolution coarsens.\n",
+    "\n",
+    "### Final Classification: Flattening and FC\n",
+    "\n",
+    "Once the features are extracted into a small 3D volume ($7 \\times 7 \\times 40$):\n",
+    "* **Flattening:** The volume is unrolled into a single long vector.\n",
+    "* **Total Units:** $7 \\times 7 \\times 40 = 1,960$ units.\n",
+    "* **Fully Connected (FC):** This vector is fed into standard neural network layers (Logistic Regression or Softmax).\n",
+    "Output: A final prediction $\\hat{y}$ (e.g., $0$ or $1$ for \"cat vs. no cat\").\n",
+    "\n",
+    "### Dimensionality Recap Formula\n",
+    "\n",
+    "To compute the spatial size for any layer, we use the generalized formula:\n",
+    "\n",
+    "$$n^{[l]} = \\lfloor \\frac{n^{[l-1]} + 2p^{[l]} - f^{[l]}}{s^{[l]}} + 1 \\rfloor$$\n",
+    "\n",
+    "For the transition from Layer 1 to Layer 2 in the example:\n",
+    "\n",
+    "$$\\lfloor \\frac{37 + 0 - 5}{2} + 1 \\rfloor = \\lfloor \\frac{32}{2} + 1 \\rfloor = 17$$\n",
+    "\n",
+    "### Three Types of ConvNet Layers\n",
+    "\n",
+    "Most modern architectures are composed of three primary building blocks:\n",
+    "* **Convolutional (Conv):** Extracts features using sliding filters.\n",
+    "* **Pooling (Pool):** Reduces spatial size to decrease computation and parameters (to be discussed next).\n",
+    "* **Fully Connected (FC):** Performs the final high-level reasoning and classification."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a6c06b31",
+   "metadata": {},
    "source": []
   }
  ],
