doc: Add 'Poolig Layers' section.

--- a/machine-learning/deep-learning-specialization-coursera/course-4/notebooks/week1.ipynb
+++ b/machine-learning/deep-learning-specialization-coursera/course-4/notebooks/week1.ipynb
@@ -508,6 +508,62 @@
    "cell_type": "markdown",
    "id": "a6c06b31",
    "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8ae0c892",
+   "metadata": {},
+   "source": [
+    "## Pooling Layers\n",
+    "\n",
+    "This section briefly touches on Pooling layers, which serve as a critical tool for reducing the spatial size of representations and making feature detection more robust.\n",
+    "\n",
+    "### The Mechanics of Pooling\n",
+    "\n",
+    "Pooling layers slide a window across the input volume, similar to a convolution, but instead of a dot product with weights, they perform a fixed mathematical operation.\n",
+    "* **Max Pooling:** The most common type. Within each window (e.g., $2\\times2$), only the maximum value is preserved.\n",
+    "    * **Intuition:** A high value represents the presence of a specific feature (like a cat's eye). If that feature is detected anywhere in the window, the max operation preserves that \"signal.\"\n",
+    "* **Average Pooling:** Computes the mean value of all pixels in the window.\n",
+    "    * **Usage:** While less common than Max Pooling, it is sometimes used very deep in a network to collapse spatial dimensions (e.g., from $7\\times7\\times1000$ to $1\\times1\\times1000$).\n",
+    "\n",
+    "### Key Properties and Hyperparameters\n",
+    "\n",
+    "Unlike convolutional layers, pooling layers are \"static\" operations.\n",
+    "* **No Learnable Parameters:** There are no weights ($W$) or biases ($b$) for gradient descent to update. Once you choose the hyperparameters, the computation is fixed.\n",
+    "* **Hyperparameters:**\n",
+    "    * **Filter Size ($f$):** Common choice is $f=2$ or $f=3$.\n",
+    "    * **Stride ($s$):** Common choice is $s=2$.\n",
+    "    * **Padding ($p$):** Very rarely used; usually $p=0$.\n",
+    "* **Channel Independence:** Pooling is applied to each channel ($n_c$) independently. The number of channels in the output is always identical to the number of channels in the input.\n",
+    "\n",
+    "### Dimensionality and Formulas\n",
+    "\n",
+    "The same formula used for convolutions applies to pooling to determine the output dimensions ($n_H \\times n_W \\times n_c$):\n",
+    "\n",
+    "Output Height/Width:\n",
+    "\n",
+    "$$\\lfloor\\frac{n+2p-f}{s}+1\\rfloor$$\n",
+    "\n",
+    "Example ($f=2, s=2$):\n",
+    "\n",
+    "A $4\\times4\\times n_c$ input pooled with $f=2, s=2$ results in a $2\\times2\\times n_c$ output. This effectively halves the height and width, reducing the total spatial area by $75\\%$.\n",
+    "\n",
+    "<img src='images/max_pooling.png' width=750px>\n",
+    "\n",
+    "### Why Use Pooling?\n",
+    "\n",
+    "1. **Computational Efficiency:** By shrinking $n_H$ and $n_W$, it reduces the number of operations required in subsequent layers.\n",
+    "* **Robustness:** It provides a form of translational invariance. If a feature shifts by a pixel or two, the \"max\" in that local region will likely stay the same.\n",
+    "* **Overfitting Prevention:** By reducing the number of total activations, it helps the network focus on the most important features."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bfbe7077",
+   "metadata": {},
    "source": []
   }
  ],
